# C2-XOR

./: .gitignore  LICENSE  Readme.md  flake.nix
.github/workflows/: build-agents.yml  build-c2-server-client-packer.yml
agent/http/: base64.cpp  bypass_amsi_etw.h  config.h  debug_detection.h  (+12 more)
agents/linux/: Cargo.toml  build.rs
agents/linux/.cargo/: config.toml
agents/linux/src/: crypt.rs  http.rs  main.rs  sysinfo.rs  task.rs
ansible/: playbook.yml
docs/: AGENT.md  AGENT_EN.md  BACKEND.md  BACKEND_EN.md  INFRA.md
packer/: .gitignore  Cargo.toml  DOCUMENTATION.md  Readme.md
packer/stub/: Cargo.toml
packer/stub/src/: anti_debug.rs  checksum.rs  decompress.rs  decrypt.rs  loader.rs  main.rs  overlay.rs
terraform_redteam/: api_gateway.tf  ec2.tf  lambda.tf  lambda_with_go.tf  outputs.tf  security_groups.tf  variables.tf
xor-c2-client/: .gitignore  Cargo.toml  agent_linux_20260421_142844.elf
xor-c2-client/download/: decrypt.py
xor-c2-client/src/: api.rs  main.rs  models.rs  state.rs  ui.rs
xor-c2-client/src/api/: agents.rs  auth.rs  files.rs  listeners.rs  mod.rs  results.rs  tasks.rs  utils.rs
xor-c2-client/src/models/: mod.rs  models.rs
xor-c2-client/src/ui/: login.rs  main_interface.rs
xor-c2-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  xor_c2.db
xor-c2-server/config/: config.json
xor-c2-server/src/: config.rs  main.rs
xor-c2-server/src/admin/: .env  auth.rs  cert_generator.rs  command_formatter.rs  db.rs  error.rs  mod.rs  models.rs  routes.rs
xor-c2-server/src/admin/db/: agents.rs  commands.rs  listeners.rs  mod.rs  results.rs  schema.rs  users.rs
xor-c2-server/src/admin/handlers/: agents.rs  auth.rs  files.rs  listeners.rs  mod.rs  tasks.rs  victims.rs
xor-c2-server/src/admin/models/: mod.rs
xor-c2-server/src/admin/routes/: mod.rs  routes.rs
xor-c2-server/src/agents/: agent_handler.rs  mod.rs
xor-c2-server/src/encryption/: mod.rs  xor_cipher.rs
xor-c2-server/src/helper/: helper_listener.rs  mod.rs
xor-c2-server/src/listener/: http_listener.rs  mod.rs  profile.rs
(+25 files in other folders)
