[package]
name = "xor-c2-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = "1.18.1"
hyper = "1.8.1"        # ✅ Ajouté Hyper
axum = "0.6"           # ✅ Assurez-vous d’avoir axum aussi
base64 = "0.22"
encoding_rs = "0.8"
