[package]
name = "xor-c2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["auth"] }
base64 = "0.21"
log = "0.4"
env_logger = "0.11"
actix-web = "4.12.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
chrono = "0.4"
uuid = { version = "1.18", features = ["v4", "serde"] }
dotenvy = "0.15"
hyper = "1.8.1"
